FIX alignment

--- a/src/styles/collection.css
+++ b/src/styles/collection.css
@@ -4,7 +4,6 @@
   align-items: flex-start;
   justify-content: space-between;
   margin: 4rem auto;
-  padding-top: 4rem;
   width: 90vw;
   height: 100vh;
 }
@@ -20,9 +19,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  height: 100%;
-  width: 100%;
-  /* box-sizing: border-box; */
+  height: 95%;
+  width: 95%;
   overflow: hidden;
 }
 
@@ -47,7 +45,6 @@ main {
   width: 100%;
   height: 85vh;
   padding: 1rem 1rem;
-  border-left: 1px solid var(--color-subtext);
   text-align: left;
   margin-bottom: 2rem;
   overflow-y: auto;
@@ -55,12 +52,10 @@ main {
 
 @media (max-width: 768px) {
   .markdown-body {
-    border-left: none;
-    border-top: 1px solid var(--color-subtext);
+    margin-left: 2rem;
   }
 
   .markdown-title {
-    margin-left: 2rem;
     text-align: left;
   }
 }
